[package]
name = "xcowsay"
version = "0.1.0"
authors = ["Tomasz Kuczma <tuczi007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#gtk = { version = "0.9.2", features = ["v3_24"] }
#glib = { version = "0.10.3", features = ["v3_24"] }
x11 = { version = "2.18.2", features = ["xlib"] }
libc = "0.2.93"

structopt = { version = "0.3", default-features = false }
rand = "0.8.3"
control-code = "0.7.1"
log = "0.4.14"
stderrlog = "0.5.1"
